// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <a
        href="/"
      >
        <img
          alt="[Your Name]"
          class="headerImage borderCircle"
          src="/images/profile.jpg"
        />
      </a>
      <h2
        class="headingLg"
      >
        <a
          class="colorInherit"
          href="/"
        >
          [Your Name]
        </a>
      </h2>
    </header>
    <main>
      <span>
        test
      </span>
    </main>
    <div
      class="backToHome"
    >
      <a
        href="/"
      >
        ← Back to home
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Layout component matches snapshot, home 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <header
      class="header"
    >
      <img
        alt="[Your Name]"
        class="headerHomeImage borderCircle"
        src="/images/profile.jpg"
      />
      <h1
        class="heading2Xl"
      >
        [Your Name]
      </h1>
    </header>
    <main>
      <span>
        test
      </span>
    </main>
  </div>
</DocumentFragment>
`;
